--- a/chat/gabber/Makefile
+++ b/chat/gabber/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.29 2004/02/14 17:21:34 jlam Exp $
+# $NetBSD: Makefile,v 1.30 2004/03/07 12:09:20 jmmv Exp $
 
 DISTNAME=	gabber-0.8.8
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	chat
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=gabber/}
 
