--- a/editors/conglomerate/Makefile
+++ b/editors/conglomerate/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.20 2004/02/20 12:43:28 jmmv Exp $
+# $NetBSD: Makefile,v 1.21 2004/03/07 12:09:20 jmmv Exp $
 #
 
 DISTNAME=	conglomerate-0.7.12
+PKGREVISION=	1
 CATEGORIES=	editors
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=conglomerate/}
 
