--- a/games/gnocatan/Makefile
+++ b/games/gnocatan/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.23 2004/02/25 07:32:45 minskim Exp $
+# $NetBSD: Makefile,v 1.24 2004/03/07 12:09:21 jmmv Exp $
 #
 
 DISTNAME=	gnocatan-0.8.1.16
+PKGREVISION=	1
 CATEGORIES=	games gnome
 MASTER_SITES=	${MASTER_SITE_SOURCEFORGE:=gnocatan/}
 
