--- a/games/gnome-games/Makefile
+++ b/games/gnome-games/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.61 2004/02/20 23:45:43 jlam Exp $
+# $NetBSD: Makefile,v 1.62 2004/03/07 12:09:21 jmmv Exp $
 
 DISTNAME=		gnome-games-1.4.0.4
-PKGREVISION=		9
+PKGREVISION=		10
 CATEGORIES=		games gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gnome-games/1.4/}\
 			${MASTER_SITE_LOCAL}
