--- a/math/gcalctool/Makefile
+++ b/math/gcalctool/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.22 2004/02/27 17:26:30 jmmv Exp $
+# $NetBSD: Makefile,v 1.23 2004/03/07 12:09:21 jmmv Exp $
 #
 
 DISTNAME=		gcalctool-4.3.48
+PKGREVISION=		1
 CATEGORIES=		math gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gcalctool/4.3/}
 EXTRACT_SUFX=		.tar.bz2
