--- a/math/gnumeric/Makefile
+++ b/math/gnumeric/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.79 2004/02/14 17:21:44 jlam Exp $
+# $NetBSD: Makefile,v 1.80 2004/03/07 12:09:21 jmmv Exp $
 #
 
 DISTNAME=		gnumeric-1.0.13
-PKGREVISION=		5
+PKGREVISION=		6
 CATEGORIES=		math gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gnumeric/1.0/}
 
