--- a/misc/gnome-utils/Makefile
+++ b/misc/gnome-utils/Makefile
@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.68 2004/01/24 14:11:10 grant Exp $
+# $NetBSD: Makefile,v 1.69 2004/03/07 12:09:21 jmmv Exp $
 
 DISTNAME=		gnome-utils-1.4.1.2
-PKGREVISION=		6
+PKGREVISION=		7
 CATEGORIES=		misc x11 gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gnome-utils/1.4/}
 EXTRACT_SUFX=		.tar.bz2
