--- a/misc/gnome2-user-docs/Makefile
+++ b/misc/gnome2-user-docs/Makefile
@@ -1,7 +1,8 @@
-# $NetBSD: Makefile,v 1.5 2004/02/14 17:21:45 jlam Exp $
+# $NetBSD: Makefile,v 1.6 2004/03/07 12:09:21 jmmv Exp $
 #
 
 DISTNAME=	gnome2-user-docs-2.4.1
+PKGREVISION=	1
 CATEGORIES=	misc
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/gnome2-user-docs/2.4/}
 EXTRACT_SUFX=	.tar.bz2
