--- a/x11/gdm/Makefile
+++ b/x11/gdm/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.51 2004/02/14 17:21:55 jlam Exp $
+# $NetBSD: Makefile,v 1.52 2004/03/07 12:09:21 jmmv Exp $
 #
 
 DISTNAME=	gdm-2.4.4.7
-PKGREVISION=	4
+PKGREVISION=	5
 CATEGORIES=	x11 gnome
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/gdm/2.4/} \
 		${MASTER_SITE_LOCAL}
