--- a/x11/gnome2-terminal/Makefile
+++ b/x11/gnome2-terminal/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.24 2004/02/14 19:49:57 minskim Exp $
+# $NetBSD: Makefile,v 1.25 2004/03/07 12:09:22 jmmv Exp $
 #
 
 DISTNAME=		gnome-terminal-2.4.2
 PKGNAME=		${DISTNAME:S/-/2-/}
-PKGREVISION=		2
+PKGREVISION=		3
 CATEGORIES=		x11 gnome
 MASTER_SITES=		${MASTER_SITE_GNOME:=sources/gnome-terminal/2.4/}
 EXTRACT_SUFX=		.tar.bz2
