--- a/devel/libdockapp/Makefile
+++ b/devel/libdockapp/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2003/07/21 16:43:26 martti Exp $
+# $NetBSD: Makefile,v 1.11 2004/03/07 14:10:39 minskim Exp $
 #
 
 DISTNAME=	libdockapp-0.4.0
@@ -9,7 +9,7 @@ MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://shadowmere.student.utwente.nl/
 COMMENT=	Simple library to create dockapps for WindowMaker
 
-USE_BUILDLINK2=		YES
+USE_BUILDLINK3=		YES
 GNU_CONFIGURE=		YES
 USE_LIBTOOL=		YES
 LTCONFIG_OVERRIDE=	${WRKSRC}/ltconfig
@@ -19,5 +19,5 @@ post-install:
 	${INSTALL_DATA_DIR} ${PREFIX}/share/doc/libdockapp
 	${INSTALL_DATA} ${WRKSRC}/README ${PREFIX}/share/doc/libdockapp
 
-.include "../../graphics/xpm/buildlink2.mk"
+.include "../../graphics/xpm/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
