--- a/graphics/mng/Makefile
+++ b/graphics/mng/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2004/02/14 17:21:43 jlam Exp $
+# $NetBSD: Makefile,v 1.15 2004/03/07 14:37:02 minskim Exp $
 
 DISTNAME=	libmng-1.0.5
 PKGNAME=	${DISTNAME:S/lib//}
@@ -22,6 +22,8 @@ CONFIGURE_ARGS+=	--with-lcms=${BUILDLINK_PREFIX.lcms}
 CPPFLAGS+=		${BUILDLINK_CPPFLAGS.lcms}
 
 DOCDIR=			${PREFIX}/share/doc/mng
+
+INSTALLATION_DIRS=	man/man3 man/man5
 
 post-install:
 	${INSTALL_DATA_DIR} ${DOCDIR}
