--- a/games/lgeneral/Makefile
+++ b/games/lgeneral/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2003/12/08 14:41:39 wiz Exp $
+# $NetBSD: Makefile,v 1.9 2004/03/07 16:59:44 snj Exp $
 #
 
 DISTNAME=	lgeneral-1.1.1
@@ -11,11 +11,11 @@ HOMEPAGE=	http://lgames.sourceforge.net/index.php?project=LGeneral
 COMMENT=	Panzer General play-a-like, uses Panzer General data files
 
 GNU_CONFIGURE=	YES
-USE_BUILDLINK2=	YES
+USE_BUILDLINK3=	YES
 USE_X11=	YES
 
 CONFIGURE_ARGS+=	--disable-dl
 
-.include "../../devel/SDL/buildlink2.mk"
-.include "../../audio/SDL_mixer/buildlink2.mk"
+.include "../../devel/SDL/buildlink3.mk"
+.include "../../audio/SDL_mixer/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
