--- a/converters/p5-Jcode/Makefile
+++ b/converters/p5-Jcode/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.9 2003/09/13 06:22:49 jlam Exp $
+# $NetBSD: Makefile,v 1.10 2004/03/07 17:51:10 minskim Exp $
 #
 
 DISTNAME=	Jcode-0.83
@@ -13,7 +13,9 @@ COMMENT=	Perl5 module for handling various Japanese charsets
 
 DEPENDS+=	p5-MIME-Base64>=2.1:../../converters/p5-MIME-Base64
 
-USE_BUILDLINK2=		YES
+PKG_INSTALLATION_TYPES=	overwrite pkgviews
+
+USE_BUILDLINK3=		YES
 PERL5_PACKLIST=		${PERL5_SITEARCH}/auto/Jcode/.packlist
 
 pre-configure:
