--- a/net/Makefile
+++ b/net/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.452 2004/03/06 12:05:53 grant Exp $
+# $NetBSD: Makefile,v 1.453 2004/03/07 18:46:45 minskim Exp $
 #
 
 COMMENT=	Networking tools
@@ -243,6 +243,7 @@ SUBDIR+=	publicfile
 SUBDIR+=	puf
 SUBDIR+=	pure-ftpd
 SUBDIR+=	pxe
+SUBDIR+=	py-GeoIP
 SUBDIR+=	py-IP
 SUBDIR+=	py-METAR
 SUBDIR+=	py-ORBit
