--- a/games/fire/Makefile
+++ b/games/fire/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2003/07/26 21:41:17 jmmv Exp $
+# $NetBSD: Makefile,v 1.13 2004/03/07 20:21:17 snj Exp $
 #
 
 DISTNAME=	fire-1.0
@@ -10,9 +10,9 @@ MAINTAINER=	tech-pkg@NetBSD.org
 HOMEPAGE=	http://www.libsdl.org/projects/fire/index.html
 COMMENT=	Organic fireworks demo
 
-USE_BUILDLINK2=		YES
+USE_BUILDLINK3=		YES
 USE_X11=		YES
 GNU_CONFIGURE=		YES
 
-.include "../../devel/SDL/buildlink2.mk"
+.include "../../devel/SDL/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
