--- a/chat/gossip/Makefile
+++ b/chat/gossip/Makefile
@@ -1,8 +1,8 @@
-# $NetBSD: Makefile,v 1.19 2004/02/25 16:09:47 minskim Exp $
+# $NetBSD: Makefile,v 1.20 2004/03/07 22:47:04 jmmv Exp $
 #
 
 DISTNAME=	gossip-0.7
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	chat
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/gossip/0.7/}
 EXTRACT_SUFX=	.tar.bz2
