--- a/audio/xmms-alarm/Makefile
+++ b/audio/xmms-alarm/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.2 2004/02/14 17:21:34 jlam Exp $
+# $NetBSD: Makefile,v 1.3 2004/03/07 22:52:41 snj Exp $
 #
 
 DISTNAME=		xmms-alarm-0.3.3
@@ -9,11 +9,11 @@ MAINTAINER=		dotz@irc.pl
 HOMEPAGE=		http://www.snika.uklinux.net/index.php?show=xmms-alarm
 COMMENT=		Plugin which allows XMMS to be used as an alarm clock
 
-USE_BUILDLINK2=		YES
+USE_BUILDLINK3=		YES
 USE_X11=		YES
 GNU_CONFIGURE=		YES
 USE_LIBTOOL=		YES
 SHLIBTOOL_OVERRIDE=	libtool
 
-.include "../../audio/xmms/buildlink2.mk"
+.include "../../audio/xmms/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
