--- a/devel/swig-build/Makefile
+++ b/devel/swig-build/Makefile
@@ -1,7 +1,9 @@
-# $NetBSD: Makefile,v 1.1.1.1 2003/05/25 08:52:37 epg Exp $
+# $NetBSD: Makefile,v 1.2 2004/03/07 23:20:55 minskim Exp $
 
 PKGNAME=	swig-build-${SWIG_VERSION}
 COMMENT=	Simplified Wrapper and Interface Generator, base build files
+
+PKG_INSTALLATION_TYPES=	overwrite pkgviews
 
 .include "Makefile.common"
 
