--- a/devel/py-subversion/Makefile
+++ b/devel/py-subversion/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.3 2003/12/06 03:01:57 epg Exp $
+# $NetBSD: Makefile,v 1.4 2004/03/08 00:09:46 minskim Exp $
 
 PKGNAME=	${PYPKGPREFIX}-subversion-${SVNVER}
 COMMENT=	Python bindings and tools for Subversion
@@ -15,7 +15,7 @@ PYTHON_PATCH_SCRIPTS=	tools/cvs2svn/cvs2svn.py \
 ALL_TARGET=		swig-py-lib swig-py
 INSTALL_TARGET=		install-swig-py-lib install-swig-py
 
-MAKE_ENV+=		EXTRA_CPPFLAGS=${BUILDLINK_CPPFLAGS}
+MAKE_ENV+=		EXTRA_CPPFLAGS="${BUILDLINK_CPPFLAGS}"
 MAKEFLAGS+=		swig_pydir=${LOCALBASE}/${PYSITELIB}/libsvn \
 			swig_pydir_extra=${LOCALBASE}/${PYSITELIB}/svn
 
