--- a/devel/subversion/Makefile.common
+++ b/devel/subversion/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.11 2004/02/14 17:21:39 jlam Exp $
+# $NetBSD: Makefile.common,v 1.12 2004/03/08 00:15:53 minskim Exp $
 
 DISTNAME=		subversion-${SVNVER}
 CATEGORIES=		devel
@@ -17,7 +17,7 @@ COMMON_FILESDIR=	${.CURDIR}/../../devel/subversion/files
 PATCHDIR=		${.CURDIR}/../../devel/subversion/patches
 
 GNU_CONFIGURE=		YES
-USE_BUILDLINK2=		YES
+USE_BUILDLINK3=		YES
 USE_LIBTOOL=		YES
 
 CONFIGURE_ARGS+=	--with-apr=${BUILDLINK_PREFIX.apr}
