--- a/www/ap2-subversion/Makefile
+++ b/www/ap2-subversion/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.11 2003/12/06 03:01:58 epg Exp $
+# $NetBSD: Makefile,v 1.12 2004/03/08 00:15:53 minskim Exp $
 
 PKGNAME=	ap2-subversion-${SVNVER}
 COMMENT=	WebDAV server (Apache module) for Subversion
@@ -15,6 +15,6 @@ INSTALL_TARGET=		install-mods-shared
 
 BUILDLINK_DEPENDS.apache?=	apache>=2.0.48
 
-.include "../../devel/subversion/buildlink2.mk"
-.include "../../www/apache2/buildlink2.mk"
+.include "../../devel/subversion/buildlink3.mk"
+.include "../../www/apache2/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
